added error handling to client id load
- Error messages are forwarded to a span
- Playlist fields stay disabled until success

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <input id="client-id" type="text" placeholder="Client ID">
         <input id="client-secret" type="text" placeholder="Client Secret">
         <input id="submit" value="Start" type="button">
+        <span id="zero-error"></span>
     </div>
     <div id="tables" class="row" aria-disabled="true">
         <div class="column" id="one">
